--- a/research/finance_report.ipynb
+++ b/research/finance_report.ipynb
@@ -175,6 +175,35 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "\n",
+    "from selenium import webdriver \n",
+    "from selenium.webdriver.chrome.options import Options\n",
+    "from selenium.webdriver.chrome.service import Service\n",
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "\n",
+    "chrome_options = Options()\n",
+    "#chrome_options.add_argument(\"--disable-extensions\")\n",
+    "#chrome_options.add_argument(\"--disable-gpu\")\n",
+    "#chrome_options.add_argument(\"--no-sandbox\") # linux only\n",
+    "chrome_options.add_argument(\"--headless\")\n",
+    "# chrome_options.headless = True # also works\n",
+    "service = Service(executable_path=ChromeDriverManager().install())\n",
+    "#executable_path=\"C:\\\\Users\\\\pugac\\\\.wdm\\\\drivers\\\\chromedriver\\\\win32\\\\102.0.5005.61\\\\chromedriver.exe\",\n",
+    "driver = webdriver.Chrome(service = service\n",
+    "                                ,options=chrome_options)\n",
+    "start_url = \"https://duckgo.com\"\n",
+    "driver.get(start_url)\n",
+    "print(driver.page_source.encode(\"utf-8\"))\n",
+    "# b'<!DOCTYPE html><html xmlns=\"http://www....\n",
+    "driver.quit()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
