--- a/research/finance_report.ipynb
+++ b/research/finance_report.ipynb
@@ -201,18 +201,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'yaml'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-e328fc547c2a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0myaml\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"test.yaml\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"r\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mstream\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0myaml\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msafe_load\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstream\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'yaml'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 2}\n"
      ]
     }
    ],
@@ -224,6 +220,104 @@
     "        print(yaml.safe_load(stream))\n",
     "    except yaml.YAMLError as exc:\n",
     "        print(exc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1d \n",
+      "Прирост MoEX: 0.03% 📈 \n",
+      "Прирост SPX: -1.93% 📉\n",
+      "5d \n",
+      "Прирост MoEX: 0.03% 📈 \n",
+      "Прирост SPX: -2.66% 📉\n",
+      "1mo \n",
+      "Прирост MoEX: -5.05% 📉 \n",
+      "Прирост SPX: -0.75% 📉\n",
+      "3mo \n",
+      "Прирост MoEX: -9.08% 📉 \n",
+      "Прирост SPX: -4.69% 📉\n",
+      "6mo \n",
+      "Прирост MoEX: -44.02% 📉 \n",
+      "Прирост SPX: -13.88% 📉\n",
+      "1y \n",
+      "Прирост MoEX: -51.18% 📉 \n",
+      "Прирост SPX: -3.84% 📉\n"
+     ]
+    }
+   ],
+   "source": [
+    "import yfinance as yf\n",
+    "def form_string(hist,spy = False):\n",
+    "    start_val = hist['Open'][0]\n",
+    "    end_val = hist['Close'][-1]\n",
+    "    percentage = (end_val-start_val)/start_val*100\n",
+    "\n",
+    "    #print(start_val,end_val,percentage)\n",
+    "    if percentage>=0:\n",
+    "        emoj = emoji.emojize('\\U0001F4c8')\n",
+    "    else:\n",
+    "        emoj = emoji.emojize('\\U0001F4c9')\n",
+    "    if spy:\n",
+    "        return  ('\\nПрирост SPX: %.2f' % percentage) + f'% {emoj}'\n",
+    "    else:\n",
+    "        return ('\\nПрирост MoEX: %.2f' % percentage) + f'% {emoj}'\n",
+    "moex = yf.Ticker(\"MOEX.ME\")\n",
+    "spx =  yf.Ticker(\"SPY\")\n",
+    "periods = ['1d','5d','1mo','3mo','6mo','1y']\n",
+    "for period in periods:\n",
+    "    hist_moex = moex.history(period=period,interval = '1d')\n",
+    "    hist_spx = spx.history(period=period)\n",
+    "    print(period,form_string(hist_moex),form_string(hist_spx, True))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ksjhdfkjdsf 1.23'"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "'ksjhdfkjdsf %.2f ' % 1.234"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('📈', '📉')"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import emoji\n",
+    "emoji.emojize('\\U0001F4c8'),emoji.emojize('\\U0001F4c9')"
    ]
   },
   {
@@ -253,7 +347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4
  },
