--- a/research/finance_report.ipynb
+++ b/research/finance_report.ipynb
@@ -322,6 +322,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "()\n",
+      "0\n",
+      "<class 'tuple'>\n",
+      "(3, 4, 5)\n",
+      "3\n",
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "def a(b,*fins):\n",
+    "    print(fins)\n",
+    "    print(len(fins))\n",
+    "    print(type(fins))\n",
+    "a(1)\n",
+    "a(1,3,4,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -347,7 +374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.7.3"
   },
   "orig_nbformat": 4
  },
