--- a/research/finance_report.ipynb
+++ b/research/finance_report.ipynb
@@ -2,18 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'selenium'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-cf215f61e3b7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mselenium\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mwebdriver\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mwebdriver_manager\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmicrosoft\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mEdgeChromiumDriverManager\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mselenium\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwebdriver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0medge\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptions\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mOptions\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mselenium\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwebdriver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcommon\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mby\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mBy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mselenium\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwebdriver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0medge\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mservice\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mService\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'selenium'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[WDM] - ====== WebDriver manager ======\n",
+      "[WDM] - Current edge version is 105.0.1343\n",
+      "[WDM] - Get LATEST edgedriver version for 105.0.1343 Edge\n",
+      "[WDM] - Driver [C:\\Users\\pugac\\.wdm\\drivers\\edgedriver\\win64\\105.0.1343.53\\msedgedriver.exe] found in cache\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1d\n",
+      "1week\n",
+      "1month\n",
+      "3months\n",
+      "6months\n",
+      "1year\n",
+      "1d\n",
+      "1week\n",
+      "1month\n"
      ]
     }
    ],
@@ -32,7 +46,11 @@
     "    time.sleep(2)\n",
     "    browser.find_element(By.XPATH,'/html/body/div[2]/div/div/div[1]/div[3]/button[2]').click()\n",
     "    time.sleep(2)\n",
-    "    img = browser.find_element(By.XPATH,'/html/body/div[10]/div/div/div[2]/div[2]/div/div/div[1]/label/div/textarea').text\n",
+    "    if period == '1month':\n",
+    "       img = browser.find_element(By.XPATH,'/html/body/div[11]/div/div/div[2]/div[2]/div/div/div[1]/label/div/textarea').text \n",
+    "    else:\n",
+    "        img = browser.find_element(By.XPATH,'/html/body/div[10]/div/div/div[2]/div[2]/div/div/div[1]/label/div/textarea').text\n",
+    "                                            # //*[@id=\"id-sjsnbv\"]/div/div[2]/div[2]/div/div/div[1]/label/div/textarea\n",
     "    browser.get(img)\n",
     "    element =  browser.find_element(By.XPATH,'/html/body/div[2]/div/div/a[1]/img')\n",
     "    location = element.location\n",
@@ -85,8 +103,10 @@
     "browser = webdriver.Edge(service=Service(EdgeChromiumDriverManager().install()),options=browser_options)\n",
     "browser.set_window_size(1920,1280)\n",
     "for period in duration_dict_spx.keys():\n",
+    "    print(period)\n",
     "    get_SPX(browser=browser,period=period)\n",
     "for period in duration_dict_moex.keys():\n",
+    "    print(period)\n",
     "    get_MOEX(browser=browser,period=period)\n",
     "browser.quit()"
    ]
@@ -362,7 +382,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4
  },
